--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Database"]
 	path = Database
 	url = https://github.com/wj0624/SQL_Oracle.git
+[submodule "Spring_Framework"]
+	path = Spring_Framework
+	url = https://github.com/wj0624/Spring-Framework.git
