--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Spring_Framework"]
 	path = Spring_Framework
 	url = https://github.com/wj0624/Spring-Framework.git
+[submodule "React"]
+	path = React
+	url = https://github.com/wj0624/Hyundai_React.git
